deploy3-autoscale.yml
apiVersion : apps/v1
kind: Deployment
metadata:
    name: web-deploy-autoscaling
    labels:
        app: main
        env: prod
        owner: Artem
spec:
    replicas: 2
    selector:
        matchLabels:
            project: proj3
    template:
        metadata:
            labels:
                project: proj3
        spec:
            containers:
                - name: proj3-web-deploy
                  image: adv4000/k8sphp:version2
                  ports:
                    - containerPort: 80
