pods_v2.yml
apiVersion : v1
kind: Pod
metadata:
    name: my-web
    labels:
        env: prod
        app: main
        tier: frontend
        owner: Artem
spec:
    containers:
        - name: container-apache
          image: nginx:latest
          ports:
            - containerPort: 80
