pods_v3.yml
apiVersion : v1
kind: Pod
metadata:
    name: pod3
    labels:
        env: prod
        app: main
        tier: frontend
        owner: Artem
spec:
    containers:
        - name: container-apache
          image: nginx:latest
          ports:
            - containerPort: 80
            
        - name: container-api
          image: tomcat:latest
          ports:
            - containerPort: 8080
