service2-load-balancer-multi .yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-multi-pod
  labels:
    app : my-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      project: proj2
  template:
    metadata:
      labels:
        project: proj2
    spec:
      containers:
        - name : my-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80   # Port on Pod

        - name : not-my-web
          image: tomcat:latest
          ports:
            - containerPort: 8080  # Port on Pod

---
apiVersion: v1
kind: Service
metadata:
  name: my-multi-pods-service
  labels:
     env  : prod
     owner: DenisAstahov
spec:
  type: LoadBalancer
  selector:
    project: proj2
  ports:
    - name      : my-web-app-listener
      protocol  : TCP
      port      : 90
      targetPort: 80

    - name      : not-my-web-app-listener
      protocol  : TCP
      port      : 8888
      targetPort: 8080
