service3-load-balancer-auto-scaling.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app : my-k8s-deployment
spec:
  selector:
    matchLabels:
      project: xyz
  template:
    metadata:
      labels:
        project: xyz
    spec:
      containers:
        - name : my-web
          image: adv4000/k8sphp:latest
          ports:
            - containerPort: 80   # Port on Pod

---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels:
     env  : prod
     owner: Artem
spec:
  type: LoadBalancer
  selector:
    project: xyz
  ports:
    - name      : my-web-app-listener
      protocol  : TCP
      port      : 90
      targetPort: 80
