ingress-hosts.yml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
spec:
  rules:
  - host: test1.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test1
            port:
              number: 80
  - host: test2.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test2
            port:
              number: 80
  - host: test3.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test3
            port:
              number: 80
  - host: test4.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test4
            port:
              number: 80
  - host: test5.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: test5
            port:
              number: 8080
